--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-slideshow-image": "^3.4.6",
+    "redux": "^4.1.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.1"
   },
