--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "react-slick": "^0.28.1",
     "react-slideshow-image": "^3.4.6",
     "redux": "^4.1.0",
