--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.1",
     "yarn": "^1.22.11"
