--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-slick": "^0.28.1",
     "react-slideshow-image": "^3.4.6",
     "redux": "^4.1.0",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "slick-carousel": "^1.8.1",
