--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.1.1",
-    "yarn": "^1.22.11"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
