--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/redux-form": "^8.3.2",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "react": "^16.13.0",
@@ -24,6 +30,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "slick-carousel": "^1.8.1",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -49,5 +56,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.0",
+    "@types/react-select": "^4.0.18",
+    "@types/redux-actions": "^2.6.2"
   }
 }
